# birding

./: .gitignore  README.md  pyproject.toml
notebooks/: bird_images.ipynb  checklist_to_yaml.ipynb  checklists.ipynb  lifelist.ipynb  temp.ipynb
src/birding/: ebird_api.py  geocoding.py  inaturalist.py  primitives.py  sqlite_cache.py  taxonomies.py  yaml_primitives.py
